mobile: Basic audio playback works! (+ sqlstring + log)

--- a/features/notebooks/181017_mobile_assets_payloads_search_recs.ipynb
+++ b/features/notebooks/181017_mobile_assets_payloads_search_recs.ipynb
@@ -11,6 +11,8 @@
     "- TODO Still more room to compress mobile payloads\n",
     "    - 71% of payload: audio\n",
     "        - Can be cut in ~half if we can drop 32k -> 16k (maybe with aac_he?)\n",
+    "            - Android supports HE-AACv2: https://developer.android.com/guide/topics/media/media-formats\n",
+    "            - But ios doesn't? https://apple.co/2NORQHB\n",
     "        - Payload 1.98g -> ~1.28g -- ✅ ~35% of payload\n",
     "    - 21% of payload: spectro\n",
     "        - Not much excess: maybe ~5% of spectros (see notebooks/spectro_img_encode)\n",
