--- a/features/notebooks/181017_mobile_build_payload_search_recs.py.ipynb
+++ b/features/notebooks/181017_mobile_build_payload_search_recs.py.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "3.138s"
+    "time": "10.888s"
    },
    "outputs": [],
    "source": [
@@ -71,19 +71,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "4.311s"
+    "time": "11.785s"
+   },
+   "outputs": [],
+   "source": [
+    "# Fail if too few recs are downloaded (easy way to waste a bunch of training time!)\n",
+    "sg_load.load_xc_meta(_nocache=True,\n",
+    "    fail_on_low_download_frac=True,\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "52.317s"
    },
    "outputs": [],
    "source": [
     "with ExitStack() as stack:\n",
-    "    stack.enter_context(cache_control(refresh=True))\n",
+    "    # stack.enter_context(cache_control(refresh=True))  # XXX Debug\n",
     "    log_levels({\n",
     "        'payloads': 'INFO',\n",
     "        # 'payloads': 'DEBUG',\n",
     "    })\n",
     "    kwargss = [\n",
-    "        # dict(cache_type='hybrid', refresh=True),  # Simulate cache miss\n",
-    "        dict(cache_type='hybrid'),                # Allow cache hit\n",
+    "        # dict(cache_type='hybrid', refresh=True),  # Simulate cache miss [XXX Debug]\n",
+    "        dict(cache_type='hybrid'),                  # Allow cache hit\n",
     "    ]\n",
     "    search_recss = []\n",
     "    for i, kwargs in enumerate(kwargss):\n",
